gitops/platform/kyverno-policies/tests/management/resources/platform-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: platform-team
  labels:
    kubernetes.io/metadata.name: platform-team
    tier: platform
