gitops/platform/kyverno-policies/tests/management/resources/platform-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-pod
  namespace: platform-team
spec:
  containers:
    - name: api
      image: busybox:1.36
      command:
        - sh
        - -c
        - sleep 3600
