gitops/platform/kyverno-policies/tests/management/resources/unlabeled-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unlabeled-team
  labels:
    kubernetes.io/metadata.name: unlabeled-team
