gitops/platform/kyverno-policies/tests/management/resources/unlabeled-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stray-pod
  namespace: unlabeled-team
spec:
  containers:
    - name: api
      image: busybox:1.36
      command:
        - sh
        - -c
        - sleep 3600
